--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.16.13",
     "@astrojs/check": "^0.9.4",
+    "astro": "^4.16.13",
+    "pdfequips-footer": "^0.1.6",
+    "pdfequips-navbar": "^3.3.8",
     "typescript": "^5.6.3"
+  },
+  "devDependencies": {
+    "@astrojs/react": "^3.6.2",
+    "sass": "^1.81.0"
   }
 }
